# blocked-vec

./: Cargo.toml  README.md
src/: imp.rs  io.rs  lib.rs
src/imp/: block.rs
