[package]
authors = ["Js2xxx <akucxy@163.com>"]
categories = ["data-structures", "no-std"]
description = "A vector of byte blocks behaving like files"
documentation = "https://docs.rs/blocked-vec"
edition = "2021"
homepage = "https://github.com/js2xxx/blocked-vec"
license = "MIT OR Apache-2.0"
name = "blocked-vec"
repository = "https://github.com/js2xxx/blocked-vec"
version = "0.1.6"
keywords = ["stream", "io", "data-structures", "no-std"]

[features]
default = ["std"]
std = ["dep:page_size"]

[dependencies]
page_size = {version = "0.4", optional = true}
